Feat: Criação do CRUD de salas
