# controllers/salaController.js
@@ -1,0 +1,123 @@
+import usuarioEntity from '../entities/usuarioEntity.js';
+import salaEntity from '../entities/salaEntity.js';
+import salaRepository from '../repositories/salaRepository.js';
+
+export default class SalaController {
+
+    async listar(req, res) {
+        try {
+            let sala = new salaRepository();
+            let lista = await sala.listar();
+            res.status(200).json(lista);
+        } catch (ex) {
+            res.status(500).json({ erro: ex.message });
+        }
+    }
+
+    async obter(req, res) {
+        try {
+            let id = req.params.id;
+            let sala = new salaRepository();
+            let entidade = await sala.obter(id);
+            if (entidade) {
+                res.status(200).json(entidade);
+            } else {
+                res.status(404).json({ erro: "Sala não encontrada" });
+            }
+        } catch (ex) {
+            res.status(500).json({ erro: ex.message });
+        }
+    }
+
+    async gravar(req, res) {
+        try {
+            let { salNome, usuario } = req.body;
+            if (salNome && usuario && usuario.usuId > 0) {
+                let entidade = new salaEntity(0, salNome, new usuarioEntity(usuario.usuId));
+
+                let repo = new salaRepository();
+                let result = await repo.gravar(entidade);
+                if (result) {
+                    res.status(201).json({ msg: "Sala criada com sucesso" });
+                } else {
+                    throw new Error({ msg: "Erro ao criar sala" });
+                }
+            } else {
+                res.status(400).json({ msg: "Dados inválidos" });
+            }
+
+        } catch (ex) {
+            res.status(500).json({ erro: ex.message });
+        }
+    }
+
+    async alterar(req, res) {
+        try {
+            let { salId, salNome, usuario } = req.body;
+            if (salId && salNome && usuario && usuario.usuId > 0) {
+                let entidade = new salaEntity(salId, salNome, new usuarioEntity(usuario.usuId));
+                let repo = new salaRepository();
+                if (await repo.obter(salId)) {
+                    let result = await repo.alterar(entidade);
+
+                    if (result) {
+                        res.status(200).json({ msg: "Alteração feita com sucesso!" });
+                    } else {
+                        throw new Error({ msg: "Erro ao alterar sala" });
+                    }
+                } else {
+                    res.status(404).json({ msg: "Sala não encontrada para alteração" });
+                }
+
+            } else {
+                res.status(400).json({ msg: "Dados inválidos" });
+            }
+        } catch (ex) {
+            res.status(500).json({ erro: ex.message });
+        }
+    }
+
+    async alterarParcialmente(req, res) {
+        try {
+            let { salId, salNome, usuario } = req.body;
+
+            if (salId && (salNome || (usuario && usuario.usuId > 0))) {
+                let salaEntidade = new salaEntity(salId, salNome, new usuarioEntity(usuario.usuId));
+
+                if (usuario && usuario.usuId > 0) {
+                    salaEntidade.usuario = new usuarioEntity(usuario.usuId);
+                }
+
+                let salaRepo = new salaRepository();
+                let result = await salaRepo.alterarParcialmente(salaEntidade);
+
+                if (result == false) {
+                    throw new Error("Erro ao alterar sala no banco de dados");
+                }
+
+                res.status(200).json({ msg: "Alteração parcial realizada com sucesso" })
+            }
+        } catch (ex) {
+            res.status(500).json({ erro: ex.message });
+        }
+    }
+
+    async deletar(req, res) {
+        try {
+            let { id } = req.params.id;
+            let sala = new salaRepository();
+            if (await sala.obter(id)) {
+                let result = await sala.delete(id);
+                if (result) {
+                    res.status(200).json(result);
+                } else {
+                    throw new Error({ msg: "Sala não encontrada para exclusão" });
+                };
+            } else {
+                res.status(404).json({ msg: "Sala não encontrada para exclusão" });
+            }
+        } catch (ex) {
+            res.status(500).json({ msg: ex.message });
+        }
+    }
+}
