# server.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import swaggerUi from 'swagger-ui-express'
 import routerUsuarios from './routes/usuarioRoute.js';
+import routerSalas from './routes/salaRoute.js';
 
 import { createRequire } from "module";
 const require = createRequire(import.meta.url);
@@ -14,6 +15,7 @@ app.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson));
 
 //rotas
 app.use("/usuarios", routerUsuarios);
+app.use("/salas", routerSalas);
 
 app.listen(5000, function () {
     console.log("servidor web em funcionamento!");
